👌 fix x overflow on mobile responsive mode issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+body, html {overflow-x: hidden!important}
 body{
     margin: 0;
     padding: 0;
